--- a/install/webconfigs/apache.conf
+++ b/install/webconfigs/apache.conf
@@ -2,14 +2,14 @@
 
     ServerName ${siteurl}
 
-    DocumentRoot ${finalpath}/public
+    DocumentRoot /var/www/html
 
     ErrorLog /var/log/PufferPanel-error.log
     CustomLog /var/log/PufferPanel-access.log combined
 
     ScriptAlias /assets/ ${finalpath}/app/assets
 
-    <Directory ${finalpath}/public>
+    <Directory /var/www/html>
         DirectoryIndex index.php
         AllowOverride All
         Order Allow,Deny
